[package]
name = "lumber"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge@gmail.com>"]
edition = "2018"

[features]
builtin-sets = [] # Builtin sets is not implemented, but may be attempted in future?

[dependencies]
paw = "1.0"
pest = "2.1"
pest_derive = "2.1"
ramp = "0.5"
structopt = { version = "0.3", features = ["paw"] }
weak-table = "0.3"
serde = { version = "1.0", features = ["derive"], optional = true }
