[package]
name = "lumber"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge@gmail.com>"]
edition = "2018"

[features]
builtin-sets = [] # Builtin sets is not implemented, but may be attempted in future?
occurs = [] # Occurs check is disabled for its significant performance cost, but can be included if needed
test-perf = ["flame", "flamer"] # For debugging performance. Not for use.
serde = ["libserde", "im-rc/serde"]

[dependencies]
paw = "1.0"
pest = "2.1"
pest_derive = "2.1"
ramp = "0.5"
structopt = { version = "0.3", features = ["paw"] }
weak-table = "0.3"
libserde = { package = "serde", version = "1.0", features = ["derive"], optional = true }
im-rc = "15.0"

flame = { version = "0.2", optional = true }
flamer = { version = "0.4", optional = true }
